dapr-distributed-calendar/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
